# amplitude-serialization

./: .cspell.json  .gitignore  .pre-commit-config.yaml  HS3.md  HS3_base.json  HS3_extended.json  LICENSE  Lc2ppiK.json  README.md  description.md  json_options.jl  pixi.toml  pyproject.toml  read_json.jl  schema.json
.cspell/: julia.txt  physics.txt  project.txt  python.txt
.github/workflows/: docs.yml
docs/: .gitignore  HS3.md  _quarto.yml  conf.py  description.md  index.md
docs/julia/: Lb2pKg.qmd  Manifest.toml  Project.toml  X23pi_compass.qmd  json_options.jl  lb2pkg-lhcb-2765817.qmd  lb2pkg.qmd  lc2pkpi.md  lc2pkpi.qmd  lc2ppik-lhcb-2683025.qmd  read_json.jl  x2pipipi-compass-1391643.qmd
docs/julia/Lb2pKg_files/execute-results/: html.json
docs/python/: lc2pkpi.md  lc2pkpi.qmd  lc2ppik-lhcb-2683025.qmd  spectrum-lhcb.py
models/: HS3_base.json  Lb2pKg,json  Lb2pKg.json  Lc2ppiK.json  X23pi_compass.json  lb2pkg-lhcb-2765817.json  lc2ppik-lhcb-2683025.json  x2pipipi-compass-1391643.json
