[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]

[project]
authors = [
    {name = "Ilya Segal"},
    {name = "Mikhail Mikhasenko"},
    {name = "Remco de Boer"},
]
dependencies = [
    "myst-nb",
    "pre-commit",
    "pydata-sphinx-theme",
    "ruff",
    "sphinx-autobuild",
]
description = "Prototype for the amplitude model serialization format"
dynamic = ["version"]
license = {text = "MIT"}
name = "amplitude-serialization"
requires-python = ">= 3.8"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = [
    "linux-64",
    "osx-64",
]

[tool.pixi.dependencies]
juliaup = "*"
python = ">=3.8.0"

[tool.pixi.tasks.doc]
cmd = """
sphinx-build \
    --builder html \
    --fail-on-warning \
    --keep-going \
    docs docs/_build/html
"""
depends_on = ["install-julia"]

[tool.pixi.tasks.doclive]
cmd = """
sphinx-autobuild \
    --builder html \
    --fail-on-warning \
    --keep-going \
    --open-browser \
    --re-ignore '.*/.ipynb_checkpoints/.*' \
    --re-ignore 'docs/_build/.*' \
    --re-ignore 'docs/_static/.*' \
    --watch=docs \
    docs docs/_build/html
"""
depends_on = ["install-julia"]

[tool.pixi.tasks.install-julia]
cmd = """
juliaup add 1.10.3 && \
juliaup default 1.10.3 && \
julia --project -e '
    using Pkg
    Pkg.add("IJulia")
    import IJulia
    IJulia.installkernel("julia-amplitude-serialization")
'
"""

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
sort_table_keys = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
