[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
]

[project]
authors = [
    {name = "Ilya Segal"},
    {name = "Mikhail Mikhasenko"},
    {name = "Remco de Boer"},
]
dependencies = [
    "ipykernel",
    "jupyter-cache",
    "nbclient",
    "nbformat",
    "pre-commit",
]
description = "Prototype for the amplitude model serialization format"
dynamic = ["version"]
license = {text = "MIT"}
name = "amplitude-serialization"
requires-python = ">= 3.8"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = [
    "linux-64",
    "osx-64",
]

[tool.pixi.dependencies]
juliaup = "*"
python = ">=3.8.0"
quarto = "*"

[tool.pixi.tasks.doc]
cmd = "quarto render"
cwd = "docs"
depends_on = ["install-julia"]

[tool.pixi.tasks.doclive]
cmd = "quarto preview"
cwd = "docs"
depends_on = ["install-julia"]

[tool.pixi.tasks.install-julia]
cmd = """
juliaup add 1.10.3 && \
juliaup default 1.10.3 && \
julia --project -e '
    using Pkg
    Pkg.add("IJulia")
    import IJulia
    IJulia.installkernel("julia-amplitude-serialization")
'
"""

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
sort_table_keys = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
